Services/media/radarr/ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: radarr
  annotations:
    # If your Traefik is listening for this annotation:
    kubernetes.io/ingress.class: traefik-external
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`radarr.zlaya.tech`)
      kind: Rule
      services:
        - name: radarr
          port: 7878
      middlewares:
        - name: oidc-auth
          namespace: radarr
        - name: default-headers
          namespace: default
  tls: {}
